# python-azviz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  azviz.py  pyproject.toml  requirements.txt  test-merge
.github/workflows/: ci.yml
docs/: REPOSITORY_STRUCTURE.md  run_examples.md
examples/: basic_usage.py  cli_examples.md
src/azviz/: __init__.py  cli.py
src/azviz/azure/: __init__.py  client.py
src/azviz/core/: __init__.py  azviz.py  models.py
src/azviz/icons/: __init__.py  icon_manager.py
src/azviz/visualization/: __init__.py  dot_generator.py  graph_builder.py  renderer.py
tests/: __init__.py  test_basic.py
tools/: README.md  generate_all_subscription_diagrams.py
