[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-azviz"
version = "1.1.2"
description = "Azure resource topology visualization tool - Python implementation inspired by the PowerShell AzViz module"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patrick Rutledge", email = "rut31337@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["azure", "visualization", "topology", "graph", "cloud", "infrastructure"]
requires-python = ">=3.8"
dependencies = [
    "azure-identity>=1.12.0",
    "azure-mgmt-core>=1.4.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-subscription>=3.1.1",
    "networkx>=3.0",
    "graphviz>=0.20.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/rut31337/python-azviz"
Repository = "https://github.com/rut31337/python-azviz"
Documentation = "https://github.com/rut31337/python-azviz#readme"
"Bug Tracker" = "https://github.com/rut31337/python-azviz/issues"
"Original PowerShell Version" = "https://github.com/PrateekKumarSingh/AzViz"

[project.scripts]
python-azviz = "azviz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]
ignore = ["E501", "S101", "PLR0913", "PLR0912", "PLR0915", "PLR0911", "T201", "BLE001", "G004", "PLC0415", "TID252", "EXE001", "FA100", "FA102", "TRY003", "EM101", "EM102", "TRY300", "TRY400", "C901", "S314", "F841", "PTH123", "RUF001", "FBT001", "FBT002", "FBT003", "W291", "W293", "ERA001", "PLR2004", "B007", "S603", "S607", "RUF013", "SIM108", "ARG002", "SIM102", "SIM105", "E722", "S110", "RET504", "SLF001", "RUF012", "COM812"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
